--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -73,5 +73,33 @@ nav a{
     max-width: 500px;
 }
 .banner p{
+    color: #757575;
+    font-family: "Open Sans";
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+}
+/* main secion style start*/
 
+/* about */
+.about{
+    padding: 130px;
+    border-radius: 10px;
+    background: #FFF8F3;
+    margin: 130px 0;
+}
+.about h3{
+    color: #181818;
+    text-align: center;
+    font-family: "Open Sans";
+    font-size: 35px;
+    font-weight: 700;
+}
+.about p{
+    color: #757575;
+    text-align: center;
+    font-family: "Open Sans";
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
 }
