--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -84,6 +84,9 @@ main{
     max-width: 1140px;
     margin: 0 auto;
 }
+main section{
+    margin: 130px;
+}
 /* about */
 .about{
     padding: 130px;
@@ -91,14 +94,14 @@ main{
     background: #FFF8F3;
     margin: 130px 0;
 }
-.about h3{
+.section_title{
     color: #181818;
     text-align: center;
     font-family: "Open Sans";
     font-size: 35px;
     font-weight: 700;
 }
-.about p{
+.sec-description{
     color: #757575;
     text-align: center;
     font-family: "Open Sans";
@@ -127,4 +130,37 @@ font-family: "Open Sans";
 font-size: 20px;
 font-weight: 700;
 line-height: 30px;
+}
+#what-i-do{
+    padding: 30px 150px;
+}
+.skill{
+    padding: 30px;
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+    
+}
+.skill_title{
+    color:#181818;
+text-align: center;
+font-family: "Open Sans";
+font-size: 20px;
+font-weight: 700;
+}
+.skill-container{
+    display: flex;
+    gap: 24px;
+}
+.skill-description{
+    color:  #757575;
+font-family: "Open Sans";
+font-size: 16px;
+font-weight: 400;
+}
+/*resume*/
+.resume-column-title{
+    color: #474747;
+    font-size: 30px;
+    font-weight: 700;
 }
