--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -197,3 +197,9 @@ font-weight: 400;
     text-align: center;
     margin-top: 50px;
 }
+/*footer*/
+footer{
+    display: flex;
+    background: #FFF8F3;
+    padding: 130px 200px;
+}
