--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -200,6 +200,32 @@ font-weight: 400;
 /*footer*/
 footer{
     display: flex;
+    gap: 100px;
     background: #FFF8F3;
     padding: 130px 200px;
+    margin-top: 100px;
+}
+.social-link{
+    margin-right: 25px;
+}
+.footer-column{
+    width: 50%;
+}
+.section-description{
+    color: #757575;
+    text-align: center;
+    font-family: "Open Sans";
+    font-size: 18px;
+    font-weight: 400;
+    text-align: left;
+}
+.contact, input[type="text"], input[type="email"], textarea{
+    display: block;
+    margin-bottom: 25px;
+    padding: 18px 35px;
+    color: #757575;
+    border-radius: 5px;
+   /* background: #fff;*/
+    border: 0;
+    width: 100%;
 }
